[gd_scene load_steps=36 format=3 uid="uid://bxtv8e7fbwflk"]

[ext_resource type="Texture2D" uid="uid://bdb8kvwv22p13" path="res://Mini Legend Starter Bundle 1.1/Mini Legend Starter Bundle/characters/player.png" id="1_6cd4h"]
[ext_resource type="Script" uid="uid://cr3n5occ7fhdv" path="res://Assets/Scripts/player_controller.gd" id="1_7dd06"]
[ext_resource type="Script" uid="uid://cj00nyhvhaim1" path="res://Assets/Scripts/player_animator.gd" id="2_38rej"]
[ext_resource type="PackedScene" uid="uid://c4d352v40qq6d" path="res://Assets/Scenes/dash.tscn" id="4_t1xgp"]
[ext_resource type="Texture2D" uid="uid://ba2llewnkvf5p" path="res://Mini Legend Starter Bundle 1.1/Mini Legend Starter Bundle/effects/dust-friction.png" id="5_23lac"]

[sub_resource type="AtlasTexture" id="AtlasTexture_23lac"]
atlas = ExtResource("1_6cd4h")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrbh7"]
atlas = ExtResource("1_6cd4h")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq5fl"]
atlas = ExtResource("1_6cd4h")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xka8r"]
atlas = ExtResource("1_6cd4h")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy5gb"]
atlas = ExtResource("1_6cd4h")
region = Rect2(0, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsrmw"]
atlas = ExtResource("1_6cd4h")
region = Rect2(32, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8kuu"]
atlas = ExtResource("1_6cd4h")
region = Rect2(64, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv74q"]
atlas = ExtResource("1_6cd4h")
region = Rect2(0, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qq7w"]
atlas = ExtResource("1_6cd4h")
region = Rect2(32, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcr7l"]
atlas = ExtResource("1_6cd4h")
region = Rect2(64, 320, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yrbh7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23lac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrbh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq5fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xka8r")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy5gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsrmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8kuu")
}],
"loop": true,
"name": &"climb_wall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv74q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qq7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcr7l")
}],
"loop": true,
"name": &"grab_wall",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_38rej"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 32, 32)]
}

[sub_resource type="Animation" id="Animation_lerqx"]
resource_name = "attack"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 160, 32, 32), Rect2(32, 160, 32, 32), Rect2(64, 160, 32, 32), Rect2(96, 160, 32, 32)]
}

[sub_resource type="Animation" id="Animation_ecf78"]
resource_name = "attack_down"
length = 1.2
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 256, 32, 32), Rect2(32, 256, 32, 32), Rect2(64, 256, 32, 32), Rect2(96, 256, 32, 32), Rect2(128, 256, 32, 32)]
}

[sub_resource type="Animation" id="Animation_jp3cw"]
resource_name = "climb"
length = 1.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Rect2(0, 354, 32, 32), Rect2(32, 354, 32, 32), Rect2(64, 354, 32, 32)]
}

[sub_resource type="Animation" id="Animation_c3tg1"]
resource_name = "dash"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 288, 32, 32), Rect2(32, 288, 32, 32), Rect2(64, 288, 32, 32), Rect2(96, 288, 32, 32)]
}

[sub_resource type="Animation" id="Animation_7dd06"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 32, 32), Rect2(32, 0, 32, 32), Rect2(64, 0, 32, 32), Rect2(96, 0, 32, 32)]
}

[sub_resource type="Animation" id="Animation_w3t24"]
resource_name = "jump"
length = 1.2
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 256, 32, 32), Rect2(32, 256, 32, 32), Rect2(64, 256, 32, 32), Rect2(96, 256, 32, 32), Rect2(128, 256, 32, 32)]
}

[sub_resource type="Animation" id="Animation_23lac"]
resource_name = "run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 64, 32, 32), Rect2(32, 64, 32, 32), Rect2(64, 64, 32, 32), Rect2(96, 64, 32, 32), Rect2(0, 64, 32, 32)]
}

[sub_resource type="Animation" id="Animation_t1xgp"]
resource_name = "walk"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 32, 32, 32), Rect2(32, 32, 32, 32), Rect2(64, 32, 32, 32), Rect2(96, 32, 32, 32), Rect2(0, 32, 32, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w3t24"]
_data = {
&"RESET": SubResource("Animation_38rej"),
&"attack": SubResource("Animation_lerqx"),
&"attack_down": SubResource("Animation_ecf78"),
&"climb": SubResource("Animation_jp3cw"),
&"dash": SubResource("Animation_c3tg1"),
&"idle": SubResource("Animation_7dd06"),
&"jump": SubResource("Animation_w3t24"),
&"run": SubResource("Animation_23lac"),
&"walk": SubResource("Animation_t1xgp")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7dd06"]
radius = 4.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_23lac"]
radius = 9.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_38rej"]
radius = 5.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_w3t24"]
atlas = ExtResource("5_23lac")
region = Rect2(0, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3tg1"]
atlas = ExtResource("5_23lac")
region = Rect2(32, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_lerqx"]
atlas = ExtResource("5_23lac")
region = Rect2(64, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp3cw"]
atlas = ExtResource("5_23lac")
region = Rect2(96, 66, 32, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecf78"]
atlas = ExtResource("5_23lac")
region = Rect2(128, 66, 32, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_vy5gb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3t24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3tg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lerqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp3cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecf78")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}]

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("animation_player")]
z_index = 5
position = Vector2(30, 30)
platform_on_leave = 2
script = ExtResource("1_7dd06")
animation_player = NodePath("PlayerAnimator/AnimationPlayer")
jump_power = 8.0

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -25)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 25
limit_right = 2144
limit_bottom = 647

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_yrbh7")
animation = &"attack"
frame_progress = 0.53297096

[node name="PlayerAnimator" type="Node2D" parent="." node_paths=PackedStringArray("player_controller", "animation_player", "sprite")]
script = ExtResource("2_38rej")
player_controller = NodePath("..")
animation_player = NodePath("AnimationPlayer")
sprite = NodePath("../Sprite2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerAnimator"]
libraries = {
&"": SubResource("AnimationLibrary_w3t24")
}
autoplay = "idle"
speed_scale = 2.5

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -16)
texture = ExtResource("1_6cd4h")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_7dd06")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(5, -13)
shape = SubResource("CircleShape2D_23lac")

[node name="PlayerHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_38rej")

[node name="Dash" parent="." instance=ExtResource("4_t1xgp")]

[node name="dash_cloud" type="AnimatedSprite2D" parent="."]
position = Vector2(-19, -13)
sprite_frames = SubResource("SpriteFrames_vy5gb")
animation = &"dash"

[node name="VineRayCast" type="RayCast2D" parent="."]

[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="PlayerHitbox" to="." method="_on_player_hitbox_body_exited"]
